tests/ui/async-await/async-closures/is-not-fn.stderr
error[E0271]: expected `{async closure@is-not-fn.rs:7:14}` to be a closure that returns `()`, but it returns `{async closure body@$DIR/is-not-fn.rs:7:23: 7:25}`
  --> $DIR/is-not-fn.rs:7:14
   |
LL |     needs_fn(async || {});
   |     -------- ^^^^^^^^^^^ expected `()`, found `async` closure body
   |     |
   |     required by a bound introduced by this call
   |
   = note:         expected unit type `()`
           found `async` closure body `{async closure body@$DIR/is-not-fn.rs:7:23: 7:25}`
note: required by a bound in `needs_fn`
  --> $DIR/is-not-fn.rs:6:25
   |
LL |     fn needs_fn(x: impl FnOnce()) {}
   |                         ^^^^^^^^ required by this bound in `needs_fn`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
